Fix card footer alignment.

--- a/app.scss
+++ b/app.scss
@@ -74,12 +74,18 @@ button {
 	flex-grow:1;
 	flex-shrink:0;
 	flex-basis:400px;
+	display:flex;
+	flex-wrap:wrap;
 	background:$indigo;
 	margin:.5rem;
 	-webkit-transition:all 250ms;
 	-moz-transition:all 250ms;
 	transition:all 250ms;
 	box-shadow:0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+
+	div {
+		flex: 100%;
+	}
 
 	.heading {
 		padding:1rem;
@@ -128,7 +134,7 @@ button {
 		color:$white;
 		padding:1rem;
 		border-top:solid 1px $divider-gray;
-		align-item:flex-end;
+		align-self:flex-end;
 		font-size:.75rem;
 	}
 }
